tests/negative/neg_pr116_declare_missing_begin.safe
package Neg_PR116_Declare_Missing_Begin

   function Broken returns Integer

      declare
         Temp : Integer = 1;
      return Temp
